--- a/jwbook/pom.xml
+++ b/jwbook/pom.xml
@@ -7,8 +7,11 @@
   <build>
     <plugins>
       <plugin>
-        <artifactId>maven-war-plugin</artifactId>
-        <version>3.2.3</version>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <release>17</release>
+        </configuration>
       </plugin>
     </plugins>
   </build>
