--- a/spring_study/src/main/resources/application.properties
+++ b/spring_study/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+server.port=8088
+news.imgdir=C:\\SelfStudy_JSPandSpring\\spring_study\\src\\main\\resources\\static\\img
