스프링 뉴스 기사 페이지 API 버전

--- a/spring_study/src/main/resources/application.properties
+++ b/spring_study/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 server.port=8088
+#news.imgdir=C:\\SelfStudy_JSPandSpring\\spring_study\\src\\main\\resources\\static\\img
 news.imgdir=C:\\SelfStudy_JSPandSpring\\spring_study\\src\\main\\resources\\static\\img
